# calc_ultra

./: LICENSE  MANIFEST.in  README.md  changelog.txt  pyproject.toml
src/calc_ultra/: __init__.py  example.py  main.py
src/calc_ultra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/calc_ultra/texts/: algcalc.txt  derivacalc.txt  derivacalc_instructs.txt  intecalc.txt  intecalc_instructs.txt  limcalc.txt  main_screen.txt  settings.txt  utils.txt
